1.2.12:
Sam Lantinga - Sat Dec 31 19:11:59 EST 2011
 * Fixed dropping audio in the FLAC audio decoding
Sam Lantinga - Sat Dec 31 18:32:05 EST 2011
 * Fixed memory leak in SDL_LoadMUS()
Sam Lantinga - Sat Dec 31 10:22:05 EST 2011
 * SDL_mixer is now under the zlib license
James Le Cuirot - Mon Mar 21 16:54:11 PDT 2011
 * Added support for FluidSynth
Scott MC - Tue Jan 18 11:06:47 PST 2011
 * Added support for native MIDI on Haiku OS
Jon Atkins - Sat Nov 14 13:00:18 PST 2009
 * Added support for libmodplug (disabled by default)

1.2.11:
Sam Lantinga - Sat Nov 14 12:38:01 PST 2009
 * Fixed initialization error and crashes if MikMod library isn't available
Sam Lantinga - Sat Nov 14 11:22:14 PST 2009
 * Fixed bug loading multiple music files

1.2.10:
Sam Lantinga - Sun Nov  8 08:34:48 PST 2009
 * Added Mix_Init()/Mix_Quit() to prevent constantly loading and unloading DLLs
Mike Frysinger - 2009-11-05 09:11:43 PST
 * Check for fork/vfork on any platform, don't just assume it on UNIX
Jon Atkins - Thu Nov 5 00:02:50 2009 UTC
 * Fixed export of Mix_GetNumChunkDecoders() and Mix_GetNumMusicDecoders()
C.W. Betts - 2009-11-02 00:16:21 PST
 * Use newer MIDI API on Mac OS X 10.5+

1.2.9:
Ryan Gordon - Sun Oct 18 11:42:31 PDT 2009
 * Updated native MIDI support on Mac OS X for 10.6
Ryan Gordon - Sun Oct 11 05:29:55 2009 UTC
 * Reset channel volumes after a fade out interrupts a fade in.
Ryan Gordon - Sun Oct 11 02:59:12 2009 UTC
 * Fixed crash race condition with position audio functions
Ryan Gordon - Sat Oct 10 17:05:45 2009 UTC
 * Fixed stereo panning in 8-bit mode
Sam Lantinga - Sat Oct 10 11:07:15 2009 UTC
 * Added /usr/share/timidity to the default timidity.cfg locations
Sam Lantinga - Sat Oct  3 13:33:36 PDT 2009
 * MOD support uses libmikmod and is dynamically loaded by default
 * A patched version of libmikmod is included in libmikmod-3.1.12.zip
 * The libmikmod patches fix security issues CVE-2007-6720 and CVE-2009-0179.
Sam Lantinga - Sat Oct  3 02:49:41 PDT 2009