@@ -196,7 +196,6 @@ void Mix_HookMusicFinished(void (*music_finished)(void))
 static int music_halt_or_loop (void)
 {
 	/* Restart music if it has to loop */
-	
 	if (!music_internal_playing()) 
 	{
 		/* Restart music if it has to loop at a high level */
@@ -252,10 +251,6 @@ void music_mixer(void *udata, Uint8 *stream, int len)
 			}
 		}
 		
-		music_halt_or_loop();
-		if (!music_internal_playing())
-			return;
-
 		switch (music_playing->type) {
 #ifdef CMD_MUSIC
 			case MUS_CMD:
@@ -282,14 +277,14 @@ void music_mixer(void *udata, Uint8 *stream, int len)
 #ifdef USE_FLUIDSYNTH_MIDI
 				if ( fluidsynth_ok ) {
 					fluidsynth_playsome(music_playing->data.fluidsynthmidi, stream, len);
-					goto skip;
+					break;
 				}
 #endif
 #ifdef USE_TIMIDITY_MIDI
 				if ( timidity_ok ) {
 					int samples = len / samplesize;
   					Timidity_PlaySome(stream, samples);
-					goto skip;
+					break;
 				}
 #endif
 				break;
@@ -319,14 +314,12 @@ void music_mixer(void *udata, Uint8 *stream, int len)
 				/* Unknown music type?? */
 				break;
 		}
-	}
 
-skip:
-	/* Handle seamless music looping */
-	if (left > 0 && left < len) {
+		/* Handle seamless music looping */
 		music_halt_or_loop();
-		if (music_internal_playing())
+		if (left > 0 && left < len && music_internal_playing()) {
 			music_mixer(udata, stream+(len-left), left);
+		}
 	}
 }
 
